--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IM+Fell+DW+Pica:ital@1&family=Londrina+Outline&family=Montserrat&family=Noto+Serif+Display:wght@500&family=Quicksand:wght@300&display=swap" rel="stylesheet">    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="icon" href="images\favicon.io.png" type="image/x-icon">
+    <link rel="shortcut icon" href="path/to/your/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
         <div class="container" id="menu-container">
-            <img src="image.jpg" alt="Description of the image">
+            <img src="images/image.jpg" alt="Description of the image">
             <h1>Wordle</h1>
             <h2>Get 6 chances to guess a 5-letter word.</h2>
             <button tabindex="0" class="startButton" id="howTo" onclick="howTo()">How to Play</button>
@@ -45,11 +47,11 @@
             <li>The color of the tiles will change to show how close your guess was to the word.</li>
         </ul>
         <h2>Examples:</h2>
-        <h3>||||</h3>
+        <img src="images/howTo01.png" alt="Description of the image">
         <p>W is in the word and in the correct spot.</p>
-        <h3>||||</h3>
+        <img src="images/howTo02.png" alt="Description of the image">
         <p>I is in the word but in the wrong spot.</p>
-        <h3>||||</h3>
+        <img src="images/howTo03.png" alt="Description of the image">
         <p>U is not in the word in any spot.</p>
     </div>
 
