--- a/index.html
+++ b/index.html
@@ -1,70 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8" />
-    <title>Wordle (Nicola's Version)</title>
-    <link rel="stylesheet" href="style.css" />
-    <script src="words.js"></script>
-    <script src="script01.js"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=IM+Fell+DW+Pica:ital@1&family=Londrina+Outline&family=Noto+Serif+Display:wght@500&family=Quicksand:wght@300&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=IM+Fell+DW+Pica:ital@1&family=Londrina+Outline&family=Montserrat&family=Noto+Serif+Display:wght@500&family=Quicksand:wght@300&display=swap" rel="stylesheet">    
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="icon" href="images\favicon.io.png" type="image/x-icon">
-    <link rel="shortcut icon" href="path/to/your/favicon.ico" type="image/x-icon">
-</head>
-<body>
-    <header>
-        <div class="container" id="menu-container">
-            <img src="images/image.jpg" alt="Description of the image">
-            <h1>Wordle</h1>
-            <h2>Get 6 chances to guess a 5-letter word.</h2>
-            <button tabindex="0" class="startButton" id="howTo" onclick="howTo()">How to Play</button>
-            <button tabindex="0" class="startButton" id="startGame" onclick="startGame()">Start Game</button>
-            <h3 id="date-time">Loading...</>
-            <h3>Created by Nicola Szwaja</h3>
-        </div>
-    </header>
-
-    <main id="gamePanel"> 
-        <nav class="navbar">
-            <button class="iconButton" onclick="popupClick('settings-popup')"><i class="fa-solid fa-gear"></i></button>
-            <button class="iconButton" onclick="popupClick('stats-popup')"><i class="fa-solid fa-chart-column"></i></button>
-            <button class="iconButton" onclick="popupClick('info-popup')"><i class="fa-regular fa-circle-question"></i></button>
-        </nav> 
-        <h1 id="header">Wordle</h1>
-    </main>
-
-    <div class="popup" id="info-popup">
-        <button class="iconButton" id="closeButton" onclick="closePopups()"><i class="fa-solid fa-xmark"></i></button>
-        <h1>How To Play</h1>
-        <p>Guess the Wordle in 6 tries.</p>
-        <ul>
-            <li>Each guess must be a valid 5-letter word.</li>
-            <li>The color of the tiles will change to show how close your guess was to the word.</li>
-        </ul>
-        <h2>Examples:</h2>
-        <img src="images/howTo01.png" alt="Description of the image">
-        <p>W is in the word and in the correct spot.</p>
-        <img src="images/howTo02.png" alt="Description of the image">
-        <p>I is in the word but in the wrong spot.</p>
-        <img src="images/howTo03.png" alt="Description of the image">
-        <p>U is not in the word in any spot.</p>
-    </div>
-
-    <div class="popup" id="stats-popup">
-        <button class="iconButton" id="closeButton" onclick="closePopups()"><i class="fa-solid fa-xmark"></i></button>
-        <h1>Statistics</h1>
-        <p>Feature not yet available.</p>
-    </div>
-
-    <div class="popup" id="settings-popup">
-        <button class="iconButton" id="closeButton" onclick="closePopups()"><i class="fa-solid fa-xmark"></i></button>
-        <h1>Settings</h1>
-        <p>Feature not yet available.</p>
-    </div>  
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<title>Wordle (Nicola's Version)</title>
+		<link rel="stylesheet" href="style.css" />
+		<script src="words.js"></script>
+		<script src="script01.js"></script>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=IM+Fell+DW+Pica:ital@1&family=Londrina+Outline&family=Noto+Serif+Display:wght@500&family=Quicksand:wght@300&display=swap"
+			rel="stylesheet"
+		/>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=IM+Fell+DW+Pica:ital@1&family=Londrina+Outline&family=Montserrat&family=Noto+Serif+Display:wght@500&family=Quicksand:wght@300&display=swap"
+			rel="stylesheet"
+		/>
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+		/>
+		<link rel="icon" href="images\favicon.io.png" type="image/x-icon" />
+		<link
+			rel="shortcut icon"
+			href="path/to/your/favicon.ico"
+			type="image/x-icon"
+		/>
+	</head>
+	<body>
+		<header>
+			<div class="container" id="menu-container">
+				<img src="images/image.jpg" alt="Description of the image" />
+				<h1>Wordle</h1>
+				<h2>Get 6 chances to guess a 5-letter word.</h2>
+				<button tabindex="0" class="startButton" id="howTo" onclick="howTo()">
+					How to Play
+				</button>
+				<button
+					tabindex="0"
+					class="startButton"
+					id="startGame"
+					onclick="startGame()"
+				>
+					Start Game
+				</button>
+				<h3 id="date-time">Loading...</h3>
+				<h3>Created by Nicola Szwaja</h3>
+			</div>
+		</header>
+		<nav class="navbar">
+			<button class="iconButton" onclick="popupClick('settings-popup')">
+				<i class="fa-solid fa-gear"></i>
+			</button>
+			<button class="iconButton" onclick="popupClick('stats-popup')">
+				<i class="fa-solid fa-chart-column"></i>
+			</button>
+			<button class="iconButton" onclick="popupClick('info-popup')">
+				<i class="fa-regular fa-circle-question"></i>
+			</button>
+		</nav>
+		<h1 id="header">Wordle</h1>
+		<main>
+			<div id="gamePanel">
+				<!-- tu elementy dodawane są dynamicznie -->
+			</div>
+			<div class="popup" id="info-popup">
+				<button class="iconButton" id="closeButton" onclick="closePopups()">
+					<i class="fa-solid fa-xmark"></i>
+				</button>
+				<h1>How To Play</h1>
+				<p>Guess the Wordle in 6 tries.</p>
+				<ul>
+					<li>Each guess must be a valid 5-letter word.</li>
+					<li>
+						The color of the tiles will change to show how close your guess was to
+						the word.
+					</li>
+				</ul>
+				<h2>Examples:</h2>
+				<img src="images/howTo01.png" alt="Description of the image" />
+				<p>W is in the word and in the correct spot.</p>
+				<img src="images/howTo02.png" alt="Description of the image" />
+				<p>I is in the word but in the wrong spot.</p>
+				<img src="images/howTo03.png" alt="Description of the image" />
+				<p>U is not in the word in any spot.</p>
+			</div>
+			<div class="popup" id="stats-popup">
+				<button class="iconButton" id="closeButton" onclick="closePopups()">
+					<i class="fa-solid fa-xmark"></i>
+				</button>
+				<h1>Statistics</h1>
+				<p>Feature not yet available.</p>
+			</div>
+			<div class="popup" id="settings-popup">
+				<button class="iconButton" id="closeButton" onclick="closePopups()">
+					<i class="fa-solid fa-xmark"></i>
+				</button>
+				<h1>Settings</h1>
+				<p>Feature not yet available.</p>
+			</div>
+		</main>
+	</body>
 </html>
